@@ -33,7 +33,10 @@ documents those changes that are of interest to users and admins.
     the limit is reached running jobs will be killed.
  -- Fix deadlock issue in the slurmctld when lowering limits in accounting to
     lower than that of pending jobs.
-
+ -- Fix bug in salloc, sbatch and srun that could under some conditions process
+    the --threads-per-core, --cores-per-socket and --sockets-per-node options
+    improperly.
+ 
 * Changes in SLURM 2.1.9
 ========================
  -- In select/linear - Fix logic to prevent over-subscribing memory with shared
